<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tanatam.testandlearn.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ninepatch_lab"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/zero" />

        <EditText
            android:id="@+id/edt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ninepatch_lab"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/tvresult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result" />
    </LinearLayout>

    <Button
        android:id="@+id/btncal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/I_Agree" />

    <RadioGroup
        android:id="@+id/RdGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/RbPlus"
        android:orientation="horizontal">


        <RadioButton
            android:id="@id/RbPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_button_margin_left"
            android:text="@string/plus" />

        <RadioButton
            android:id="@+id/RbMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_button_margin_left"
            android:text="@string/minus" />

        <RadioButton
            android:id="@+id/RbMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_button_margin_left"
            android:text="@string/multiply" />

        <RadioButton
            android:id="@+id/RbDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_button_margin_left"
            android:text="@string/divide" />


    </RadioGroup>

    <ProgressBar
        style="@style/ProgressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        />
<View
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#00000000" />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
            android:layout_width="match_parent"
            android:id="@+id/meow"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/selector_btn_default"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher"

            />

    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
